# mtgdc_banlist

./: CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  __init__.py  __main__.py  banlist.html  banlist.json  banlists.json  card_details.py  create_banlist copy.py  histo_banlists.html  requirements.txt  setup.cfg  test.html
banlists/: 2012-01-01.json  2015-01-01.txt  2015-01-31.json  2015-03-23.json  2015-03-23.txt  2015-07-17.json  2015-07-17.txt  2015-10-02.json  2015-10-02.txt  2016-01-22.json  2016-01-22.txt  2016-04-04.json  2016-07-18.json  2016-09-22.json  2017-04-17.json  2017-07-17.json  2017-09-25.json  2017-11-27.json  2018-02-26.json  2018-05-28.json  2018-08-27.json  2018-11-26.json  2019-02-25.json  2019-05-27.json  2019-11-25.json  2020-02-24.json  2020-05-25.json  2020-08-24.json  2020-11-20.json  2021-01-21.json  2021-03-29.json  2021-05-31.json  2021-07-26.json  2021-09-27.json  2022-01-31.json  2022-02-14.json  2022-05-30.json  2022-07-25.json  2022-09-26.json  2022-11-28.json  (+7 more)
documentation/source/: conf.py  index.rst
mtgdc_banlist/: __main__.py  banlist_compiler.py  parser.py  test_banlist.py
mtgdc_banlist/banlists/: 2017-01-18.json  2018-11-26.json  2019-08-26.json  2019-11-25.json  2020-02-24.json  2020-05-25.json  2020-08-24.json  2020-11-20.json  2021-03-29.json  2021-05-31.json  2021-09-27.json  2021-11-29.json  2022-03-28.json  2022-05-30.json  2022-07-25.json  2022-09-26.json  2022-11-28.json  2023-01-30.json  2023-03-27.json  2023-05-29.json  2023-07-31.json  (+1 more)
static/: banlist_html_footer.html  banlist_html_header.html
(+3 files in other folders)
