[metadata]
name = mtgdc_banlist
version = 1.3.dev0
author = barrins-codex
author_email = spigushe@gmail.com
url = https://github.com/barrins-codex/mtgdc-banlist
description = CLI, new way to help keep an up-to-date MTGDC banlist
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = magic mtg duel-commadner dc
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Games/Entertainment

[options]
python_requires = >=3.9
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    requests
    unidecode

[options.extras_require]
dev =
    docutils<0.19
    sphinx<7,>=1.6
    sphinx-rtd-theme
    black
    flake8
    ipython
    pytest
    pylint
    zest.releaser[recommended]

[options.packages.find]
exclude =
    documentation

[flake8]
# black compatibility settings
max-line-length = 88
exclude = build, dist, .eggs, venv
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[zest.releaser]
create-wheel = yes
